import java.text.SimpleDateFormat

plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.141'
}

var projectName = [
        "Confluence-Magic-Lib",
        "TerraCurio",
        "TerraFurniture",
        "PortLib"
]

version = mod_version + "-beta" + "-${new SimpleDateFormat("yyMMdd").format(new Date())}"
group = mod_group_id

base {
    archivesName = "ConfluenceOtherworld"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

boolean isRunningInIdea = System.getProperty("idea.active") == "true"

legacyForge {
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }
        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
            jvmArguments.addAll([
                    // 忽略无效指令，避免有的人没安装 JetBrain Runtime 无法启动游戏
                    "-XX:+IgnoreUnrecognizedVMOptions",
                    // 启用 JetBrain Runtime 热重载功能
                    "-XX:+AllowEnhancedClassRedefinition"
            ])
            if (isRunningInIdea) {
                systemProperty "terminal.jline", "true"
            }
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

repositories {
    mavenLocal()
    flatDir {
        dirs 'libs'
    }
    maven {
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroupByRegex("software\\.bernie.*")
            includeGroup("com.eliotlash.mclib")
        }
    }
    maven {
        // Shedaniel's maven (Architectury API)
        url = "https://maven.architectury.dev"
        content {
            includeGroup "dev.architectury"
        }
    }
    maven {
        name = "LatvianMaven" // KubeJS
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    maven {
        url = 'https://jitpack.io'
        content {
            includeGroup "com.github.rtyley"
        }
    }
    maven { url = "https://maven.bawnorton.com/releases" }
    maven { url = 'https://maven.minecraftforge.net/' }
    maven {
        name = "Curios"
        url = uri("https://maven.theillusivec4.top/")
    }
    maven { url = "https://maven.createmod.net" } // Create
    maven { url "https://maven.ithundxr.dev/snapshots" } // Registrate
    maven {
        name = "Fuzs Mod Resources"
        url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
    }
    maven {
        name = "Iron's Maven - Release" // Iron's Spell n Spellbooks
        url = "https://code.redspace.io/releases"
    }
    maven {
        name "KosmX's maven" // Player Animator
        url 'https://maven.kosmx.dev/'
    }
    maven {
        name "org.confluenceReleases"
        url "https://maven.confluence.ink/releases"
    }
    maven {
        name "org.confluenceSnapshots"
        url "https://maven.confluence.ink/snapshots"
    }
    maven {
        name = "Ageratum" // 藿香
        url = "https://server.cjsah.net:1002/maven"
    }
    exclusiveContent { // Sable
        forRepository {
            maven {
                url = "https://maven.ryanhcode.dev/releases"
                name = "RyanHCode Maven"
            }
        }
        filter {
            includeGroup("dev.ryanhcode.sable")
            includeGroup("dev.ryanhcode.sable-companion")
        }
    }
}

dependencies {
    projectName.forEach { name -> modImplementation jarJar(project(":" + name)) }

    modImplementation jarJar("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
    modImplementation jarJar("com.eliotlash.mclib:mclib:20")
    modImplementation jarJar("org.mesdag:ParticleStorm:${particle_storm_version}-forge")
    modImplementation jarJar("org.mesdag.thr_dim_particle:ThreeDimensionParticle-core:${thr_dim_particle_version}-forge")
//    modImplementation jarJar("nowebsite.makertechno.the_trackers:TheTrackers:${the_trackers_version}")

    modImplementation "top.theillusivec4.curios:curios-forge:${curios_version}"
    modImplementation jarJar('com.github.glitchfiend:TerraBlender-forge:' + minecraft_version + '-' + terrablender_version)

//    implementation jarJar(files('libs/LanguageFixer.jar'))

    compileOnly(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-common:0.3.3"))
    implementation jarJar(group: 'com.github.bawnorton.mixinsquared', name: 'mixinsquared-forge', version: '[0.3.3,)')
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.3"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.3"))
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
    config "${mod_id}.integration.citadel.mixins.json"
    config "${mod_id}.integration.lithium.mixins.json"
}

jar {
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json,${mod_id}.integration.citadel.mixins.json,${mod_id}.integration.lithium.mixins.json"
    ])
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            curios_version         : curios_version
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml']) {
        expand replaceProperties
    }
}

tasks.withType(Copy).configureEach { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
tasks.withType(Jar).configureEach { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }

jar {
    exclude 'org/confluence/mod/common/data/gen'
}

java.withSourcesJar()

ext {
    releasesUrl = "https://maven.confluence.ink/releases"
    snapshotsUrl = "https://maven.confluence.ink/snapshots"
}
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            name = "Confluence"
            url = version.toString().endsWith("SNAPSHOT") ? snapshotsUrl : releasesUrl
            credentials {
                username = System.getenv("MAGIC_TEAM_USERNAME")
                password = System.getenv("MAGIC_TEAM_TOKEN")
            }
        }
    }
}
